Merged kf_r4 branch containing the KF2.0.0 release